# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_library.gni")

rustc_library("boringssl-sys") {
  name = "boringssl-sys"
  version = "0.1.0"
  with_unit_tests = true
  edition = "2018"

  non_rust_deps = [
    # only depend on libcrypto until we actually use the SSL bits
    "//third_party/boringssl:crypto",
  ]
}
